# idotmatrix-rs

./: Cargo.toml  README.md
examples/: gif.rs  image.rs  life.rs  marquee.rs  rainbow.rs  scan.rs  solid.rs  text.rs  text_debug.rs
src/: color.rs  device.rs  font.rs  frame.rs  image.rs  lib.rs  life.rs  preview.rs  protocol.rs  text.rs
